- Nerfed Lord of the Foocubi and Will-o'-the-wisps after player feedback.
- Only dragons can randomly roar now, as opposed to any monster with MS_ROAR.
- Reduced the number of marids and giant eels on the plane of water.
- Artifact wishing is based on the number of artifacts wished for, not
  generated, preventing the increased  number of artifacts from nerfing artifact
  wishing.

New Monsters
- Ported Gnolls, Gnoll Shamans, and Gnoll Chieftains from SLASH'EM.
- Added Lampades, high-level nymphs appearing in Gehennom.
- Added Pack Lords, which transform into Alpha Werewolves. Alpha Werewolves
  transmit regular lycanthropy, and can (rarely) summon normal werewolves.

New Objects
- Ring of Blood Magic: If you do not have enough energy to cast a spell, you
  cast it anyway, but lose hit points equal to the excess energy. Casting
  healing spells using blood magic will deal extra damage to you in order to
  prevent skill farming.
- Ring of Psychic Resistance: One of the few ways in the game to become
  resistant to psionic attacks.
- Ring of Memory: Blocks the forgetting of items, spells, and objects.
  Essentially amnesia resistance.

New Features
- Pets can gain intrinsics through corpses in the same way that the player can.
- Water walking has been implemented for monsters, and functions exactly how one
  would expect.
- Displacement has been implemented for monsters. A displaced monster has a 1/4
  chance of being someplace else when it is melee-d, and then surprising you.
  Displacement can be bypassed using see invisible or telepathy. This feature is
  subject to change on player feedback.
- Monsters can jump. This essentially allows them to do a short range teleport
  to the player if there is an available jumping path.
- All monsters can now gain displacement, water walking, and jumping from
  appropriate items.

Role and Race Changes
- Improved Cartomancer energy levels, which were very low due to a missing case
  in a switch statement.